# dephy_pi

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: nox.yml
dephy_pi/commands/: create.py
dephy_pi/core/: app.py  main.py
dephy_pi/utilities/: disk_utils.py  network_utils.py
tests/: test_dephy_pi.py  test_disk_utils.py
tests/data/: nRemovables_0.umockdev  nRemovables_1.umockdev  nRemovables_2.umockdev
