[tool.poetry]
name = "dephy_pi"
version = "0.1.0"
description = "Writes Dephy's Raspberry Pi image to an SD card."
authors = ["Jared <jcoughlin@dephy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
boto3 = "^1.21.15"
ipython = "^8.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
nox = "^2022.1.7"
flake8 = "^4.0.1"

[tool.poetry.scripts]
dephy_pi="dephy_pi.core.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
